--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ php:
 dist: trusty
 sudo: false
 
-install: composer install --no-interaction --prefer-source
+install: composer install
 
 script: vendor/bin/phpunit --verbose
